--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,3 +42,13 @@ body
 {
     padding: 1em;
 }
+
+#footer 
+{
+    background: green;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.459);
+    color: blue;
+    font-weight: normal;
+    margin: 0;
+    padding: 0.5em;
+}
